--- a/patientview-parent/patientview/src/main/resources/patientview.properties
+++ b/patientview-parent/patientview/src/main/resources/patientview.properties
@@ -8,7 +8,7 @@ jdbc.driverClassName=${jdbc.driverClassName}
 
 hibernate.hbm2ddl.auto=${hibernate.hbm2ddl.auto}
 hibernate.dialect=${hibernate.dialect}
-hibernate.show_sql=true
+hibernate.show_sql=false
 # pooling config
 hibernate.c3p0.initialPoolSize=10
 hibernate.c3p0.minPoolSize=5
