--- a/patientview-parent/patientview/src/main/resources/log4j.properties
+++ b/patientview-parent/patientview/src/main/resources/log4j.properties
@@ -35,9 +35,8 @@ log4j.appender.${logging.importer.appender.name}.layout=org.apache.log4j.Pattern
 log4j.appender.${logging.importer.appender.name}.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p - %-26.26c{1} - %m\n
 log4j.appender.${logging.importer.appender.name}.Threshold=INFO
 
-log4j.logger.org.patientview.monitoring=INFO, ${logging.importer.appender.name}
-log4j.additivity.org.patientview.monitoring=false
 #Log PV code and our regular level
 log4j.logger.org.patientview=INFO
+log4j.logger.org.springframework=DEBUG
 
 
