--- a/patientview-parent/radar/pom.xml
+++ b/patientview-parent/radar/pom.xml
@@ -38,9 +38,9 @@
 
     <profiles>
         <profile>
-            <id>org.patientview.test</id>
+            <id>test</id>
             <properties>
-                <env>org.patientview.test</env>
+                <env>test</env>
                 <tomcatmanagerurl>http://locahost:9080/manager/html</tomcatmanagerurl>
             </properties>
         </profile>
@@ -54,9 +54,9 @@
             </properties>
         </profile>
         <profile>
-            <id>localhost-org.patientview.test</id>
+            <id>localhost-test</id>
             <properties>
-                <env>localhost-org.patientview.test</env>
+                <env>localhost-test</env>
                 <tomcatmanagerurl>http://radar.dev.solidstategroup.com/manager/text</tomcatmanagerurl>
                 <warpath>/</warpath>
                 <profile.build.output-webapp-dir>${project.build.directory}/${project.build.finalName}</profile.build.output-webapp-dir>
@@ -149,11 +149,11 @@
         <testResources>
             <testResource>
                 <filtering>false</filtering>
-                <directory>src/org.patientview.test/resources</directory>
+                <directory>src/test/resources</directory>
             </testResource>
             <testResource>
                 <filtering>false</filtering>
-                <directory>src/org.patientview.test/java</directory>
+                <directory>src/test/java</directory>
                 <includes>
                     <include>**</include>
                 </includes>
@@ -229,7 +229,7 @@
                         <connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
                             <port>8443</port>
                             <maxIdleTime>3600000</maxIdleTime>
-                            <keystore>${project.build.directory}/org.patientview.test-classes/keystore</keystore>
+                            <keystore>${project.build.directory}/test-classes/keystore</keystore>
                             <password>wicket</password>
                             <keyPassword>wicket</keyPassword>
                         </connector>
@@ -466,7 +466,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <!--H2 Database for testing-->
@@ -474,7 +474,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.3.173</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <!--DBUnit for testing-->
@@ -482,15 +482,15 @@
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>2.4.9</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <!--Spring testing-->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-org.patientview.test</artifactId>
+            <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <!--  JETTY DEPENDENCIES FOR TESTING  -->
