--- a/patientview-parent/patientview/src/main/resources/log4j.properties
+++ b/patientview-parent/patientview/src/main/resources/log4j.properties
@@ -40,4 +40,4 @@ log4j.additivity.org.patientview.monitoring=false
 #Log PV code and our regular level
 log4j.logger.org.patientview=INFO
 
-
+;log4j.logger.org.hibernate=DEBUG
