--- a/patientview-parent/patientview/pom.xml
+++ b/patientview-parent/patientview/pom.xml
@@ -812,6 +812,13 @@
             <version>1.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
