--- a/patientview-parent/patientview/src/main/resources/log4j.properties
+++ b/patientview-parent/patientview/src/main/resources/log4j.properties
@@ -8,6 +8,6 @@ log4j.appender.X=org.apache.log4j.ConsoleAppender
 # Define the layout for X appender
 log4j.appender.X.layout=org.apache.log4j.PatternLayout
 log4j.appender.X.layout.conversionPattern=%m%n
-log4j.logger.org.springframework.web=DEBUG
+log4j.logger.org.hibernate=DEBUG
 
 
