--- a/patientview-parent/radar/pom.xml
+++ b/patientview-parent/radar/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
         <groupId>org.patientview</groupId>
         <artifactId>patientview-parent</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2-RELEASE</version>
     </parent>
 
     <groupId>org.patientview</groupId>
     <artifactId>radar</artifactId>
     <packaging>war</packaging>
 
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2-RELEASE</version>
 
     <name>Radar</name>
 
@@ -308,7 +308,7 @@
         <dependency>
             <groupId>org.patientview</groupId>
             <artifactId>common</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.2-RELEASE</version>
         </dependency>
 
         <dependency>
