--- a/patientview-parent/integration-tests/pom.xml
+++ b/patientview-parent/integration-tests/pom.xml
@@ -26,9 +26,9 @@
 
     <profiles>
         <profile>
-            <id>org.patientview.test</id>
+            <id>test</id>
             <properties>
-                <env>org.patientview.test</env>
+                <env>test</env>
                 <tomcatmanagerurl>http://locahost:9080/manager/html</tomcatmanagerurl>
                 <warpath>/</warpath>
                 <!-- localhost is designed to build and run with war:inplace -->
@@ -486,11 +486,6 @@
         <!--</dependency>-->
 
         <!-- test stuff -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -536,6 +531,12 @@
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.10</version>
         </dependency>
 
     </dependencies>
