Trello #434 Additional functionality with the surgical history table

--- a/patientview-parent/common/pom.xml
+++ b/patientview-parent/common/pom.xml
@@ -199,6 +199,12 @@
             <version>1.6.2</version>
         </dependency>
 
+        <dependency>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <groupId>org.codehaus.jackson</groupId>
+            <version>1.9.13</version>
+        </dependency>
+
     </dependencies>
 
 </project>
