--- a/patientview-parent/patientview/src/main/resources/log4j.properties
+++ b/patientview-parent/patientview/src/main/resources/log4j.properties
@@ -10,3 +10,6 @@ log4j.appender.X.layout=org.apache.log4j.PatternLayout
 log4j.appender.X.layout.conversionPattern=%m%n
 
 
+#Log PV code and our regular level
+log4j.logger.org.springframework.web=DEBUG
+
