--- a/patientview-parent/patientview/pom.xml
+++ b/patientview-parent/patientview/pom.xml
@@ -277,6 +277,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
+                    <attachClasses>true</attachClasses>
                     <!-- when creating the war file use the filtered web.xml -->
                     <!--<webXml>${project.build.directory}/web.xml</webXml>-->
                     <!-- overwrite the default files with any build/environment specific ones -->
