--- a/patientview-parent/patientview/pom.xml
+++ b/patientview-parent/patientview/pom.xml
@@ -814,6 +814,13 @@
             <version>1.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jvnet.hudson.main</groupId>
+            <artifactId>hudson-test-harness</artifactId>
+            <version>1.395</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
