--- a/patientview-parent/radar-web-tests/src/test/resources/radar-localhost.properties
+++ b/patientview-parent/radar-web-tests/src/test/resources/radar-localhost.properties
@@ -11,8 +11,8 @@ jdbc.password=password
 
 # Mail properties
 email.application=Radar Website<website@renalradar.org>
-email.admin1=org.patientview.test@org.patientview.test.com
-email.admin2=org.patientview.test@org.patientview.test.com
+email.admin1=test@test.com
+email.admin2=test@test.com
 admin.email.to=licy@shinetechchina.com
 
 smtp.host=smtp.mandrillapp.com
