--- a/patientview-parent/web-test/pom.xml
+++ b/patientview-parent/web-test/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.patientview</groupId>
-    <artifactId>web-org.patientview.test</artifactId>
+    <artifactId>web-test</artifactId>
     <name>Patient View Web Tests</name>
     <!--Snapshot means a version is downloaded every runtime-->
     <version>1.1-SNAPSHOT</version>
@@ -25,9 +25,9 @@
             </properties>
         </profile>
         <profile>
-            <id>org.patientview.test</id>
+            <id>test</id>
             <properties>
-                <env>org.patientview.test</env>
+                <env>test</env>
             </properties>
         </profile>
         <profile>
@@ -62,7 +62,7 @@
 
         <filters>
             <!--Uses e.g. filters/<env>-filters.properties to overlay patientview.properties, other property files -->
-            <filter>src/main/filters/${env}-web-org.patientview.test.properties</filter>
+            <filter>src/main/filters/${env}-web-test.properties</filter>
         </filters>
 
         <plugins>
@@ -91,40 +91,40 @@
             <!-- will come with all needed Spring dependencies such as spring-core and spring-beans-->
         </dependency>
 
-        <!-- org.patientview.test stuff -->
+        <!-- test stuff -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.4</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-org.patientview.test</artifactId>
+            <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.3.165</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>net.sourceforge.jwebunit</groupId>
             <artifactId>jwebunit-htmlunit-plugin</artifactId>
             <version>3.0</version>
-            <scope>org.patientview.test</scope>
+            <scope>test</scope>
             <exclusions>
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
