--- a/patientview-parent/integration-tests/pom.xml
+++ b/patientview-parent/integration-tests/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>patientview-parent</artifactId>
         <groupId>org.patientview</groupId>
-        <version>1.4-SNAPSHOT</version>
+        <version>1.4-RELEASE</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.patientview</groupId>
             <artifactId>patientview</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4-RELEASE</version>
             <type>jar</type>
             <classifier>classes</classifier>
         </dependency>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.patientview</groupId>
             <artifactId>common</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4-RELEASE</version>
             <scope>provided</scope>
         </dependency>
 
