--- a/patientview-parent/pom.xml
+++ b/patientview-parent/pom.xml
@@ -27,7 +27,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.patientview</groupId>
     <artifactId>patientview-parent</artifactId>
-    <version>1.4.1-SNAPSHOT</version>
+    <version>1.4.1-RELEASE</version>
     <packaging>pom</packaging>
     <name>PatientView Parent</name>
 
