--- a/patientview-parent/patientview/src/main/resources/developer/localhost-filters.properties
+++ b/patientview-parent/patientview/src/main/resources/developer/localhost-filters.properties
@@ -52,6 +52,7 @@ aboutme.image.directory=/home/rpv/Documents/work/rpv/app/aboutmeimages
 default.results.per.page=50
 
 # SMTP / Email settings
+email.enabled=false
 admin.email.from=
 admin.email.to=
 support.email=
