Enable/disable email using properties file email.enabled=false/true

--- a/patientview-parent/patientview/src/main/resources/patientview.properties
+++ b/patientview-parent/patientview/src/main/resources/patientview.properties
@@ -24,6 +24,7 @@ hibernate.c3p0.maxConnectionAge=14400
 hibernate.c3p0.preferredTestQuery=SELECT 1;
 hibernate.c3p0.testConnectionOnCheckin=false
 
+email.enabled=$(email.enabled}
 smtp.host=${smtp.host}
 smtp.username=${smtp.username}
 smtp.password=${smtp.password}
